unpackaged/main/default/objects/Lead/fields/Accepts_Credit_Cards__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Credit_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Updated from data provided on the contact form</inlineHelpText>
    <label>Accepts Credit Cards</label>
    <type>Checkbox</type>
</CustomField>