unpackaged/main/default/objects/Lead/fields/Account_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Case_Safe_ID__c</fullName>
    <formula>casesafeid(ConvertedAccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converted Account Casesafe ID</inlineHelpText>
    <label>Account Case Safe ID</label>
    <type>Text</type>
</CustomField>