unpackaged/main/default/objects/Lead/fields/Add_to_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Marketo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Add to Marketo</label>
    <type>Checkbox</type>
</CustomField>