unpackaged/main/default/objects/Lead/fields/Affinipay_Marketing_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Affinipay_Marketing_Engagement__c</fullName>
    <label>Affinipay Marketing Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>