unpackaged/main/default/objects/Lead/fields/Age_Disqualified_Raw__c.field-meta.xml
<CustomField>
    <fullName>Age_Disqualified_Raw__c</fullName>
    <inlineHelpText>Displays the stored time in days that the lead has been in the status of Disqualified</inlineHelpText>
    <label>Age - Disqualified (Raw)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>