unpackaged/main/default/objects/Lead/fields/Age_Engaged_Raw__c.field-meta.xml
<CustomField>
    <fullName>Age_Engaged_Raw__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Displays the stored time in days that the lead has been in the status of Engaged</inlineHelpText>
    <label>Age - Engaged (Raw)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>