unpackaged/main/default/objects/Lead/fields/Age_Known_Raw__c.field-meta.xml
<CustomField>
    <fullName>Age_Known_Raw__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Displays the stored time that the lead has been in the status of Known</inlineHelpText>
    <label>Age - Known (Raw)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>