unpackaged/main/default/objects/Lead/fields/Age_Marketing_Nurture__c.field-meta.xml
<CustomField>
    <fullName>Age_Marketing_Nurture__c</fullName>
    <formula>Age_Marketing_Nurture_Raw__c +

IF(
 TRIM( TEXT( Status )) = &quot;Marketing Nurture&quot;, 
 NOW() - Status_Change_Datetime__c, 
 0
)

/* Displays the total age in Marketing Nurture in days taking into account the time that it has spent in its current status since the Status Change Datetime */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the total age in Marketing Nurture</inlineHelpText>
    <label>Age - Marketing Nurture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>