unpackaged/main/default/objects/Lead/fields/Age_New__c.field-meta.xml
<CustomField>
    <fullName>Age_New__c</fullName>
    <formula>Age_New_Raw__c +

IF(
 TRIM( TEXT( Status )) = &quot;New&quot;, 
 NOW() - Status_Change_Datetime__c, 
 0
)

/* Displays the total age in New in days taking into account the time that it has spent in its current status since the Status Change Datetime */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the total age in New in days</inlineHelpText>
    <label>Age - New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>