unpackaged/main/default/objects/Lead/fields/Age_Working__c.field-meta.xml
<CustomField>
    <fullName>Age_Working__c</fullName>
    <formula>Age_Working_Raw__c +

IF(
 TRIM( TEXT( Status )) = &quot;Working&quot;, 
 NOW() - Status_Change_Datetime__c, 
 0
)

/* Displays the total age in Working in days taking into account the time that it has spent in its current status since the Status Change Datetime */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the total age in Working</inlineHelpText>
    <label>Age - Working</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>