unpackaged/main/default/objects/Lead/fields/AOP_other_specify_Soluno__c.field-meta.xml
<CustomField>
    <fullName>AOP_other_specify_Soluno__c</fullName>
    <label>AOP (other specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>