unpackaged/main/default/objects/Lead/fields/Assign_MQL__c.field-meta.xml
<CustomField>
    <fullName>Assign_MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign MQL</label>
    <type>Checkbox</type>
</CustomField>