unpackaged/main/default/objects/Lead/fields/Assign_to_Group__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Group__c</fullName>
    <description>This is used by Marketo to trigger round robin assignment to a named Assignment Group. Automation checks to see whether a record should be reassigned as per usual.</description>
    <inlineHelpText>Trigger an assignment by inputting the Assignment Group Name.</inlineHelpText>
    <label>Assign to Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>