unpackaged/main/default/objects/Lead/fields/Associations__c.field-meta.xml
<CustomField>
    <fullName>Associations__c</fullName>
    <description>R165215</description>
    <label>zz Associations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAOC</fullName>
            </value>
            <value>
                <fullName>AMA</fullName>
            </value>
            <value>
                <fullName>ATL AA</fullName>
            </value>
            <value>
                <fullName>CAA</fullName>
            </value>
            <value>
                <fullName>CAI</fullName>
            </value>
            <value>
                <fullName>CAR</fullName>
            </value>
            <value>
                <fullName>FARPM</fullName>
            </value>
            <value>
                <fullName>GAR</fullName>
            </value>
            <value>
                <fullName>IREM</fullName>
            </value>
            <value>
                <fullName>MAR</fullName>
            </value>
            <value>
                <fullName>MMHA</fullName>
            </value>
            <value>
                <fullName>NAA</fullName>
            </value>
            <value>
                <fullName>NAR</fullName>
            </value>
            <value>
                <fullName>NARPM</fullName>
            </value>
            <value>
                <fullName>SDAR</fullName>
            </value>
            <value>
                <fullName>SDCAA</fullName>
            </value>
            <value>
                <fullName>TAA</fullName>
            </value>
            <value>
                <fullName>TAR</fullName>
            </value>
            <value>
                <fullName>UAA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>