unpackaged/main/default/objects/Lead/fields/Bar_Association__c.field-meta.xml
<CustomField>
    <fullName>Bar_Association__c</fullName>
    <description>R165219</description>
    <label>Bar Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>