unpackaged/main/default/objects/Lead/fields/BDR__c.field-meta.xml
<CustomField>
    <fullName>BDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zzBDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>