unpackaged/main/default/objects/Lead/fields/ClientPay_Marketing_Engagement__c.field-meta.xml
<CustomField>
    <fullName>ClientPay_Marketing_Engagement__c</fullName>
    <label>ClientPay Marketing Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>