unpackaged/main/default/objects/Lead/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <description>R1915842</description>
    <label>zz MyCase Complete</label>
    <type>Date</type>
</CustomField>