unpackaged/main/default/objects/Lead/fields/Consultant_Communication_Info__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Communication_Info__c</fullName>
    <description>For the PartnerStack connection: allows PartnerStack consultants to send information for this type of lead.</description>
    <inlineHelpText>PartnerStack consultants will provide information for this type of lead here.</inlineHelpText>
    <label>Consultant Communication Info</label>
    <type>TextArea</type>
</CustomField>