unpackaged/main/default/objects/Lead/fields/Contact_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Case_Safe_ID__c</fullName>
    <formula>casesafeid(ConvertedContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converted Contact Casesafe ID</inlineHelpText>
    <label>Contact Case Safe ID</label>
    <type>Text</type>
</CustomField>