unpackaged/main/default/objects/Lead/fields/Converted_Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Converted_Account_Link__c</fullName>
    <formula>HYPERLINK(ConvertedAccountId, &quot;Account&quot;, &quot;blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to the Converted Account</inlineHelpText>
    <label>Converted Account Link</label>
    <type>Text</type>
</CustomField>