unpackaged/main/default/objects/Lead/fields/Converted_Contact_Link__c.field-meta.xml
<CustomField>
    <fullName>Converted_Contact_Link__c</fullName>
    <formula>HYPERLINK(ConvertedContactId, &quot;Contact&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to Converted Contact</inlineHelpText>
    <label>Converted Contact Link</label>
    <type>Text</type>
</CustomField>