unpackaged/main/default/objects/Lead/fields/Converted_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Lead__c</fullName>
    <description>This is a helper field used to map values to checkbox fields on Accounts, Contacts, and Opportunities upon conversion.</description>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted from Lead</label>
    <type>Checkbox</type>
</CustomField>