unpackaged/main/default/objects/Lead/fields/Converted_Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Converted_Opportunity_Link__c</fullName>
    <formula>HYPERLINK(ConvertedOpportunityId, &quot;Opportunity&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to Converted Opportunity</inlineHelpText>
    <label>Converted Opportunity Link</label>
    <type>Text</type>
</CustomField>