unpackaged/main/default/objects/Lead/fields/CP_Legacy_Solution__c.field-meta.xml
<CustomField>
    <fullName>CP_Legacy_Solution__c</fullName>
    <inlineHelpText>For use by CASEpeer only.  Legacy field from Hubspot</inlineHelpText>
    <label>CP Legacy Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_Legacy_Solution</valueSetName>
    </valueSet>
</CustomField>