unpackaged/main/default/objects/Lead/fields/Create_Person_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Create_Person_Master_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User by admins to trigger ID creation process outside of creation action</inlineHelpText>
    <label>Create Person Master ID</label>
    <type>Checkbox</type>
</CustomField>