unpackaged/main/default/objects/Lead/fields/cRO2__c.field-meta.xml
<CustomField>
    <fullName>cRO2__c</fullName>
    <label>cRO2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>