unpackaged/main/default/objects/Lead/fields/cRO3__c.field-meta.xml
<CustomField>
    <fullName>cRO3__c</fullName>
    <label>cRO3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>