unpackaged/main/default/objects/Lead/fields/Current_Accounting_Solution_Other__c.field-meta.xml
<CustomField>
    <fullName>Current_Accounting_Solution_Other__c</fullName>
    <label>Current Accounting Solution (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>