unpackaged/main/default/objects/Lead/fields/Current_Calendar_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Calendar_Solution__c</fullName>
    <inlineHelpText>Which calendaring solution does the firm use today</inlineHelpText>
    <label>Current Calendar Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calendar_Solutions</valueSetName>
    </valueSet>
</CustomField>