unpackaged/main/default/objects/Lead/fields/Current_Document_Automation_Tool__c.field-meta.xml
<CustomField>
    <fullName>Current_Document_Automation_Tool__c</fullName>
    <label>Current Document Automation Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Automation_Tools</valueSetName>
    </valueSet>
</CustomField>