unpackaged/main/default/objects/Lead/fields/Current_LPM_Other__c.field-meta.xml
<CustomField>
    <fullName>Current_LPM_Other__c</fullName>
    <inlineHelpText>Use this field to describe an LPM that is not in the main list.</inlineHelpText>
    <label>Current LPM (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>