unpackaged/main/default/objects/Lead/fields/Current_LPM_Prohibited__c.field-meta.xml
<CustomField>
    <fullName>Current_LPM_Prohibited__c</fullName>
    <description>Indicates if Current LPM is a partner with a prohibited selling status. Used in Dynamic Forms.</description>
    <formula>IF(INCLUDES(Current_LPM__c, &quot;Aderant&quot;), &quot;Aderant; &quot;,null)&amp;
IF(INCLUDES(Current_LPM__c, &quot;Firm Central&quot;), &quot;Firm Central; &quot;, null)&amp;
IF(INCLUDES(Current_LPM__c, &quot;ProLaw&quot;),&quot;ProLaw; &quot;,null)&amp;
IF(INCLUDES(Current_LPM__c, &quot;Thomson Reuters&quot;), &quot;Thomson Reuters; &quot;, null)</formula>
    <label>Current LPM Prohibited</label>
    <type>Text</type>
</CustomField>