unpackaged/main/default/objects/Lead/fields/Current_Website_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Website_Solution__c</fullName>
    <label>Current Website Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Website_Solution</valueSetName>
    </valueSet>
</CustomField>