unpackaged/main/default/objects/Lead/fields/Customer_Referral_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Referral_Email__c</fullName>
    <description>This field is stamped with the referrer&#39;s email (the person who referred the person to AffiniPay) by Marketo.</description>
    <label>Customer Referral Email</label>
    <type>Email</type>
</CustomField>