unpackaged/main/default/objects/Lead/fields/Customer_Response_to_Demo__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_to_Demo__c</fullName>
    <label>Customer Response to Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Response_to_Demo</valueSetName>
    </valueSet>
</CustomField>