unpackaged/main/default/objects/Lead/fields/D_U_N_S__c.field-meta.xml
<CustomField>
    <fullName>D_U_N_S__c</fullName>
    <description>Number is a unique nine-digit sequence recognized as the universal standard for identifying and keeping track of over 100 million businesses worldwide.</description>
    <label>D-U-N-S Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>