unpackaged/main/default/objects/Lead/fields/Demo_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Demo_Checkbox__c</fullName>
    <description>R164695</description>
    <label>Demo Checkbox</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>