unpackaged/main/default/objects/Lead/fields/Demo_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_Date__c</fullName>
    <description>Date lead or contact scheduled a demo for from a form fill</description>
    <inlineHelpText>Date lead or contact scheduled a demo for from a form fill</inlineHelpText>
    <label>Demo Scheduled Date</label>
    <type>Date</type>
</CustomField>