unpackaged/main/default/objects/Lead/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Client</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Foreign Lead</fullName>
            </value>
            <value>
                <fullName>Is Competitor</fullName>
            </value>
            <value>
                <fullName>Junk Data</fullName>
            </value>
            <value>
                <fullName>Not in ICP</fullName>
            </value>
            <value>
                <fullName>Prospective Employee</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>UW Fraud</fullName>
            </value>
            <value>
                <fullName>UW Junk</fullName>
            </value>
            <value>
                <fullName>UW Not Approved Business</fullName>
            </value>
            <value>
                <fullName>UW Payment Attempt</fullName>
            </value>
            <value>
                <fullName>Active Firm</fullName>
                <isActive>false</isActive>
                <label>Active Firm</label>
            </value>
            <value>
                <fullName>Bad Contact Info</fullName>
                <isActive>false</isActive>
                <label>Bad Contact Info</label>
            </value>
            <value>
                <fullName>Client of Active Firm</fullName>
                <isActive>false</isActive>
                <label>Client of Active Firm</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
                <isActive>false</isActive>
                <label>Existing Customer</label>
            </value>
            <value>
                <fullName>Large Firm</fullName>
                <isActive>false</isActive>
                <label>Large Firm</label>
            </value>
            <value>
                <fullName>MyCase.Gov</fullName>
                <isActive>false</isActive>
                <label>MyCase.Gov</label>
            </value>
            <value>
                <fullName>Non-Sales</fullName>
                <isActive>false</isActive>
                <label>Non-Sales</label>
            </value>
            <value>
                <fullName>Not an Attorney</fullName>
                <isActive>false</isActive>
                <label>Not an Attorney</label>
            </value>
            <value>
                <fullName>Out of Country</fullName>
                <isActive>false</isActive>
                <label>Out of Country</label>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>