unpackaged/main/default/objects/Lead/fields/Docketwise_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Docketwise_Customer_Status__c</fullName>
    <label>Docketwise Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Customer_Status</valueSetName>
    </valueSet>
</CustomField>