unpackaged/main/default/objects/Lead/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <description>R1921581</description>
    <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>