unpackaged/main/default/objects/Lead/fields/Email_Solution__c.field-meta.xml
<CustomField>
    <fullName>Email_Solution__c</fullName>
    <label>Email Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Solution</valueSetName>
    </valueSet>
</CustomField>