unpackaged/main/default/objects/Lead/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <label>Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Status</valueSetName>
    </valueSet>
</CustomField>