unpackaged/main/default/objects/Lead/fields/Employees_formula__c.field-meta.xml
<CustomField>
    <fullName>Employees_formula__c</fullName>
    <formula>NumberOfEmployees</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Employees. Used to map to Opportunity upon conversion to understand company size at time of conversion.</inlineHelpText>
    <label>Employees (formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>