unpackaged/main/default/objects/Lead/fields/Event_Lead_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Event_Lead_Ranking__c</fullName>
    <description>Ranking of a lead/prospect from events</description>
    <label>Event Lead Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_Ranking</valueSetName>
    </valueSet>
</CustomField>