unpackaged/main/default/objects/Lead/fields/Facebook_Company_Page__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Company_Page__c</fullName>
    <label>Facebook Company Page</label>
    <type>Url</type>
</CustomField>